gcc-14.2.0/gcc/testsuite/gdc.test/compilable/imports/udamodule2.d
version https://git-lfs.github.com/spec/v1
oid sha256:443d6191d161e38bb6d4df7d62fef34da88e584d403cc5ea365f95ff24bd1add
size 88
